kubernetes/apps/media/tandoor/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tandoor-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tandoor.toskbot.xyz`)
      kind: Rule
      services:
        - name: tandoor
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tandoor-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: tandoor.toskbot.xyz
